swagger doc to delete roles
